force-app/main/default/objects/Krow__Task_Assignment__c/Krow__Task_Assignment__c.object-meta.xml
<CustomObject>
    <label>Task Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Task Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>