force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Cost_Rate__c</fullName>
    <description>Cost rate for resource on behalf of role</description>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>