force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Hold__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>