force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Hour__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hour__c</fullName>
    <label>Hour</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>