force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Intacct_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Resource_Id__c</fullName>
    <description>Intacct Record Id for this Task Assignment synced in intacct.</description>
    <label>Intacct Resource Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>