force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Non_Billable_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Non_Billable_Hours_Logged__c</fullName>
    <label>Non-Billable Hours(Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>