force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Percentage_of_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Percentage_of_Work_Schedule__c</fullName>
    <description>% of Work Schedule hours to populate the hours.</description>
    <inlineHelpText>% of Work Schedule hours to populate the hours.</inlineHelpText>
    <label>% of Work Schedule</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>