force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Task Assignments</relationshipLabel>
    <relationshipName>Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>