force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Krow__Krow_Role__c</referenceTo>
    <relationshipLabel>Task Assignments</relationshipLabel>
    <relationshipName>Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>