force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Total_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours_Logged__c</fullName>
    <formula>Krow__Billable_Hours_Logged__c + Krow__Non_Billable_Hours_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours(Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>