force-app/main/default/objects/Krow__Task_Assignment__c/fields/Krow__Total_Schedule_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Schedule_Hours__c</fullName>
    <label>Total Schedule Hours</label>
    <summarizedField>Krow__Task_Assignment_Schedule__c.Krow__Total_Week_Hours__c</summarizedField>
    <summaryForeignKey>Krow__Task_Assignment_Schedule__c.Krow__Task_Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>