force-app/main/default/objects/Krow__Task_Assignment__c/validationRules/Krow__Role_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Role_is_Required</fullName>
    <active>true</active>
    <description>Role is Required</description>
    <errorConditionFormula>AND (ISBLANK(  Krow__Role__c ))</errorConditionFormula>
    <errorMessage>A Role is required when assigning a resource to a task.</errorMessage>
</ValidationRule>