force-app/main/default/objects/Krow__Task_Assignment__c/validationRules/Krow__Task_Start_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Task_Start_Date_Rule</fullName>
    <active>true</active>
    <description>Start date and End date can not be beyond the task start date and due date.</description>
    <errorConditionFormula>IF(AND(OR(ISNEW(), OR(ISCHANGED(Krow__Start_Date__c), ISCHANGED(Krow__End_Date__c))), NOT(ISPICKVAL(Krow__Krow_Task__r.Krow__Scheduling_Mode__c, &quot;Normal&quot;))), OR(OR(Krow__Start_Date__c &lt; Krow__Krow_Task__r.Krow__Start_Date__c, Krow__Start_Date__c &gt; Krow__Krow_Task__r.Krow__Due_Date__c), OR(Krow__End_Date__c &lt; Krow__Krow_Task__r.Krow__Start_Date__c, Krow__End_Date__c &gt; Krow__Krow_Task__r.Krow__Due_Date__c)), false)</errorConditionFormula>
    <errorMessage>Start date and End date can not be beyond the task start date and due date.</errorMessage>
</ValidationRule>