force-app/main/default/objects/Krow__Task_Assignment__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Krow_Task__c</columns>
    <columns>Krow__Hour__c</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__Bill_Rate__c</columns>
    <columns>Krow__Cost_Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>